--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
         <div id="g1" class="square light"><img src="./images/nl.png" /></div>
         <div id="f1" class="square dark"><img src="./images/bl.png" /></div>
         <div id="e1" class="square light"><img src="./images/kl.png" /></div>
-        <div id="d1" class="square dark">d1</div>
-        <div id="c1" class="square light">c1</div>
-        <div id="b1" class="square dark">b1</div>
-        <div id="a1" class="square light">a1</div>
+        <div id="d1" class="square dark"></div>
+        <div id="c1" class="square light"></div>
+        <div id="b1" class="square dark"></div>
+        <div id="a1" class="square light"></div>
     </div>
 
     <script src="./app.js" defer type="module"></script>
