Render pieces from FEN input

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="b3" class="square dark"></div>
         <div id="a3" class="square light"></div>
 
-        <div id="h2" class="square light"><img src="./images/pl.png" /></div>
+        <div id="h2" class="square light"></div>
         <div id="g2" class="square dark"></div>
         <div id="f2" class="square light"></div>
         <div id="e2" class="square dark"></div>
@@ -72,10 +72,10 @@
         <div id="b2" class="square light"></div>
         <div id="a2" class="square dark"></div>
 
-        <div id="h1" class="square dark"><img src="./images/rl.png" /></div>
-        <div id="g1" class="square light"><img src="./images/nl.png" /></div>
-        <div id="f1" class="square dark"><img src="./images/bl.png" /></div>
-        <div id="e1" class="square light"><img src="./images/kl.png" /></div>
+        <div id="h1" class="square dark"></div>
+        <div id="g1" class="square light"></div>
+        <div id="f1" class="square dark">></div>
+        <div id="e1" class="square light"></div>
         <div id="d1" class="square dark"></div>
         <div id="c1" class="square light"></div>
         <div id="b1" class="square dark"></div>
