--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chess</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
     <div class="board">
@@ -82,6 +82,6 @@
         <div id="a1" class="square light"></div>
     </div>
 
-    <script src="./app.js" defer type="module"></script>
+    <script type="module" src="./js/app.js" defer></script>
 </body>
 </html>
