--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <div class="board">
+    <div id="board" class="board">
 
         <div id="a8" class="square dark"></div>
         <div id="b8" class="square light"></div>
